src/tools/dmlc/test/1.2/errors/T_EACHK.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// ERROR EACHK
attribute a0 {
    parameter type = "i";
    parameter configuration = "optional";
    method set(attr_value_t v) {
    }
}

/// ERROR EACHK
attribute a1 {
    parameter type = "i";
    parameter configuration = "required";
    method get -> (attr_value_t v) {
        v = SIM_make_attr_invalid();
    }
}
